# dj-equalizer-modern

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Start_DJ_Equalizer.bat  pytest.ini
assets/: README.md
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/routes/: audio.py  health.py  playlist.py  youtube.py
backend/app/security/: sanitizer.py
backend/app/services/: audio_service.py  db_service.py  yt_search.py  yt_service.py
configs/: eq_presets.json  viz_config.json
docs/: project_memory.md  technical_manual.md  user_manual.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.local-updater.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src-tauri/src/commands/: db.rs  mod.rs  playlist.rs  presets.rs  youtube.rs
frontend/src/audio/: AudioEngine.ts
frontend/src/platform/: platform.ts  webUpdate.ts
frontend/src/store/: audioStore.ts
frontend/src/utils/: constants.ts  sanitization.ts
scripts/: build-windows-exe.ps1  build.sh  clean.ps1  clean.sh  dev.sh  diagnose.sh  serve-updates.ps1  setup.sh  sync-version.mjs  windows-service.sh  windows-start.ps1
scripts/lib/: env.sh
services/: docker-compose.yml
tests/backend/: test_sanitizer.py  test_youtube.py
tests/frontend/: audio.test.ts  sanitization.test.ts
(+25 files in other folders)
